Fix: Cumulative layout shift (CLS) problem

--- a/src/pages/FullSearchResult/styles.module.scss
+++ b/src/pages/FullSearchResult/styles.module.scss
@@ -20,6 +20,7 @@
     }
     .content {
       max-width: 780px;
+      min-height: 470px;
       width: 100%;
       margin-top: 64px;
       margin-left: 146px;
